--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,7 @@
 channels:
   - pytorch
   - gurobi
+  - dglteam
   - defaults
   - conda-forge
 dependencies:
@@ -34,6 +35,7 @@ dependencies:
   - dbus=1.13.18=hb2f20db_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
+  - dgl-cuda11.0=0.5.3=py38_0
   - ecos=2.0.7.post1=py38heb32a55_0
   - entrypoints=0.3=py38_0
   - expat=2.2.10=he6710b0_2
@@ -234,3 +236,6 @@ dependencies:
     - torch-scatter==2.0.5
     - torch-sparse==0.6.8
     - torch-spline-conv==1.2.0
+    - ugfraud==0.1.1.3
+variables:
+  DGLBACKEND: pytorch
