--- a/environment.yml
+++ b/environment.yml
@@ -1,3 +1,4 @@
+name: /home/rui/venvs/dgl
 channels:
   - pytorch
   - gurobi
@@ -5,7 +6,8 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - _libgcc_mutex=0.1=main
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_llvm
   - _tflow_select=2.3.0=eigen
   - absl-py=0.11.0=pyhd3eb1b0_1
   - argon2-cffi=20.1.0=py38h7b6447c_1
@@ -21,16 +23,17 @@ dependencies:
   - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.17.1=h27cfd23_0
   - ca-certificates=2020.12.8=h06a4308_0
-  - cachetools=4.1.1=py_0
+  - cachetools=4.2.0=pyhd3eb1b0_0
   - certifi=2020.12.5=py38h06a4308_0
   - cffi=1.14.4=py38h261ae71_0
-  - chardet=3.0.4=py38h06a4308_1003
+  - chardet=4.0.0=py38h06a4308_1003
   - click=7.1.2=py_0
   - cloudpickle=1.6.0=py_0
-  - cryptography=3.3=py38h3c74f83_0
+  - cryptography=3.3.1=py38h3c74f83_0
   - cudatoolkit=11.0.221=h6bb024c_0
-  - cvxpy=1.1.7=py38h950e882_0
-  - cvxpy-base=1.1.7=py38hc5bc63f_0
+  - cudnn=8.0.5.39=ha5ca753_1
+  - cvxpy=1.1.7=py38h578d9bd_1
+  - cvxpy-base=1.1.7=py38h51da96c_1
   - cycler=0.10.0=py38_0
   - dbus=1.13.18=hb2f20db_0
   - decorator=4.4.2=py_0
@@ -51,11 +54,10 @@ dependencies:
   - google-auth=1.21.3=py_0
   - google-auth-oauthlib=0.4.2=pyhd3eb1b0_2
   - google-pasta=0.2.0=py_0
-  - grpcio=1.31.0=py38hf8bcb03_0
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=hb31296c_0
-  - gurobi=9.1.0=py38_0
-  - gym=0.17.3=py38h578d9bd_1
+  - gst-plugins-base=1.14.0=h8213a91_2
+  - gstreamer=1.14.0=h28cd5cc_2
+  - gurobi=9.1.1=py38_0
+  - gym=0.18.0=py38h81c977d_0
   - h5py=2.10.0=py38hd6299e0_1
   - hdf5=1.10.6=hb1b8bf9_0
   - icu=58.2=he6710b0_3
@@ -66,51 +68,49 @@ dependencies:
   - ipykernel=5.3.4=py38h5ca1d4c_0
   - ipython=7.19.0=py38hb070fc8_0
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
-  - ipywidgets=7.5.1=py_1
-  - jedi=0.17.0=py38_0
+  - jedi=0.18.0=py38h06a4308_0
   - jinja2=2.11.2=py_0
+  - joblib=1.0.0=pyhd3eb1b0_0
   - jpeg=9b=h024ee3a_2
   - json5=0.9.5=py_0
   - jsonschema=3.2.0=py_2
-  - jupyter=1.0.0=py38_7
   - jupyter_client=6.1.7=py_0
-  - jupyter_console=6.2.0=py_0
   - jupyter_core=4.7.0=py38h06a4308_0
   - jupyterlab=2.2.6=py_0
   - jupyterlab_pygments=0.1.2=py_0
   - jupyterlab_server=1.2.0=py_0
-  - keras-preprocessing=1.1.0=py_1
   - kiwisolver=1.3.0=py38h2531618_0
   - lame=3.100=h7b6447c_0
   - lcms2=2.11=h396b838_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libblas=3.8.0=21_mkl
+  - libblas=3.9.0=7_mkl
   - libedit=3.1.20191231=h14c3975_1
   - libffi=3.3=he6710b0_2
-  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgcc-ng=9.3.0=h5dbcf3e_17
   - libgfortran-ng=7.3.0=hdf63c60_0
-  - liblapack=3.8.0=21_mkl
+  - liblapack=3.9.0=7_mkl
   - libllvm10=10.0.1=hbcb73fb_5
   - libopus=1.3.1=h7b6447c_0
   - libpng=1.6.37=hbc83047_0
   - libprotobuf=3.13.0.1=hd408876_0
   - libsodium=1.0.18=h7b6447c_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libstdcxx-ng=9.3.0=h2ae2ef3_17
   - libtiff=4.1.0=h2733197_1
   - libuuid=1.0.3=h1bed415_2
   - libuv=1.40.0=h7b6447c_0
   - libvpx=1.7.0=h439df22_0
   - libxcb=1.14=h7b6447c_0
   - libxml2=2.9.10=hb55368b_3
+  - llvm-openmp=11.0.0=hfc4b9b4_1
   - llvmlite=0.34.0=py38h269e1b5_4
   - lz4-c=1.9.2=heb0550a_3
   - markdown=3.3.3=py38h06a4308_0
   - markupsafe=1.1.1=py38h7b6447c_0
-  - matplotlib=3.3.2=0
+  - matplotlib=3.3.2=h06a4308_0
   - matplotlib-base=3.3.2=py38h817c723_0
   - mccabe=0.6.1=py38_1
   - mistune=0.8.4=py38h7b6447c_1000
-  - mkl=2020.2=256
+  - mkl=2020.4=h726a3e6_304
   - mkl-service=2.3.0=py38he904b0f_0
   - mkl_fft=1.2.0=py38h23d657b_0
   - mkl_random=1.1.1=py38h0573a6f_0
@@ -122,40 +122,36 @@ dependencies:
   - nettle=3.4.1=hbb512f6_0
   - networkx=2.5=py_0
   - ninja=1.10.2=py38hff7bd54_0
-  - notebook=6.1.4=py38_0
+  - notebook=6.1.6=py38h06a4308_0
   - numba=0.51.2=py38h0573a6f_1
-  - numpy=1.19.2=py38h54aff64_0
-  - numpy-base=1.19.2=py38hfa32c7d_0
   - oauthlib=3.1.0=py_0
   - olefile=0.46=py_0
   - openh264=2.1.0=hd408876_0
   - openssl=1.1.1i=h27cfd23_0
-  - opt_einsum=3.1.0=py_0
-  - osqp=0.6.1=py38hcb8c335_2
-  - packaging=20.7=pyhd3eb1b0_0
-  - pandas=1.1.3=py38he6710b0_0
+  - osqp=0.6.2=py38h51da96c_1
+  - packaging=20.8=pyhd3eb1b0_0
+  - pandas=1.2.0=py38ha9443f7_0
   - pandoc=2.11=hb0f4dca_0
   - pandocfilters=1.4.3=py38h06a4308_1
-  - parso=0.8.1=pyhd3eb1b0_0
+  - parso=0.7.0=py_0
   - pcre=8.44=he6710b0_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=8.0.1=py38he98fc37_0
-  - pip=20.3.1=py38h06a4308_0
+  - pillow=8.1.0=py38he98fc37_0
+  - pip=20.3.3=py38h06a4308_0
   - prometheus_client=0.9.0=pyhd3eb1b0_0
   - prompt-toolkit=3.0.8=py_0
-  - prompt_toolkit=3.0.8=0
   - protobuf=3.13.0.1=py38he6710b0_1
-  - ptyprocess=0.6.0=pyhd3eb1b0_2
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.8=py_0
   - pycodestyle=2.6.0=py_0
   - pycparser=2.20=py_2
   - pyflakes=2.2.0=py_0
-  - pyglet=1.5.0=py38h32f6830_1
+  - pyglet=1.5.14=py38h578d9bd_1
   - pygments=2.7.3=pyhd3eb1b0_0
   - pyjwt=1.7.1=py38_0
-  - pyopenssl=20.0.0=pyhd3eb1b0_1
+  - pyopenssl=20.0.1=pyhd3eb1b0_1
   - pyparsing=2.4.7=py_0
   - pyqt=5.9.2=py38h05f1152_4
   - pyrsistent=0.17.3=py38h7b6447c_0
@@ -164,47 +160,40 @@ dependencies:
   - python-dateutil=2.8.1=py_0
   - python_abi=3.8=1_cp38
   - pytorch=1.7.1=py3.8_cuda11.0.221_cudnn8.0.5_0
-  - pytz=2020.4=pyhd3eb1b0_0
+  - pytz=2020.5=pyhd3eb1b0_0
   - pyzmq=20.0.0=py38h2531618_1
+  - qdldl-python=0.1.5=py38h51da96c_0
   - qt=5.9.7=h5867ecd_1
-  - qtconsole=4.7.7=py_0
-  - qtpy=1.9.0=py_0
   - readline=8.0=h7b6447c_0
-  - requests=2.25.0=pyhd3eb1b0_0
+  - requests=2.25.1=pyhd3eb1b0_0
   - requests-oauthlib=1.3.0=py_0
-  - rsa=4.6=py_0
-  - scipy=1.5.2=py38h0b6359f_0
-  - scs=2.1.2=py38hfe171b0_2
-  - seaborn=0.11.0=py_0
+  - rsa=4.7=pyhd3eb1b0_1
+  - scikit-learn=0.23.2=py38h0573a6f_0
+  - scs=2.1.2=py38h8799cdc_2
+  - seaborn=0.11.1=pyhd3eb1b0_0
   - send2trash=1.5.0=pyhd3eb1b0_1
-  - setuptools=51.0.0=py38h06a4308_2
+  - setuptools=51.1.2=py38h06a4308_4
   - sip=4.19.13=py38he6710b0_0
   - six=1.15.0=py38h06a4308_0
   - sqlite=3.33.0=h62c20be_0
   - tbb=2020.3=hfd86e86_0
-  - tensorboard=2.3.0=pyh4dce500_0
   - tensorboard-plugin-wit=1.6.0=py_0
-  - tensorboardx=2.1=py_0
-  - tensorflow=2.3.0=eigen_py38h71ff20e_0
-  - tensorflow-base=2.3.0=eigen_py38hb57a387_0
-  - tensorflow-estimator=2.3.0=pyheb71bc4_0
   - termcolor=1.1.0=py38_1
-  - terminado=0.9.1=py38_0
+  - terminado=0.9.2=py38h06a4308_0
   - testpath=0.4.4=py_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=hbc83047_0
   - toml=0.10.1=py_0
   - torchaudio=0.7.2=py38
   - torchvision=0.8.2=py38_cu110
   - tornado=6.1=py38h27cfd23_0
-  - tqdm=4.54.1=pyhd3eb1b0_0
   - traitlets=5.0.5=py_0
   - typing_extensions=3.7.4.3=py_0
-  - urllib3=1.25.11=py_0
+  - urllib3=1.26.2=pyhd3eb1b0_0
   - wcwidth=0.2.5=py_0
   - webencodings=0.5.1=py38_1
   - werkzeug=1.0.1=py_0
-  - wheel=0.36.1=pyhd3eb1b0_0
-  - widgetsnbextension=3.5.1=py38_0
+  - wheel=0.36.2=pyhd3eb1b0_0
   - wrapt=1.12.1=py38h7b6447c_1
   - x264=1!157.20191217=h7b6447c_0
   - xz=5.2.5=h7b6447c_0
@@ -213,29 +202,21 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h9ceee32_0
   - pip:
-    - ase==3.20.1
     - atari-py==0.2.6
-    - cupy-cuda110==8.2.0
-    - fastrlock==0.5
-    - googledrivedownloader==0.4
-    - isodate==0.6.0
-    - joblib==0.17.0
-    - opencv-python==4.4.0.46
-    - psutil==5.7.3
-    - python-louvain==0.14
-    - rdflib==5.0.0
+    - flatbuffers==1.12
+    - grpcio==1.32.0
+    - keras-preprocessing==1.1.2
+    - numpy==1.19.5
+    - opencv-python==4.5.1.48
+    - opt-einsum==3.3.0
+    - psutil==5.8.0
     - rgmining-common==0.9.1
     - rgmining-fraud-eagle==0.9.7
     - rgmining-fraudar==0.6.1
     - rgmining-rsd==0.2.5
-    - scikit-learn==0.23.2
+    - scipy==1.4.1
     - stable-baselines3==0.10.0
-    - threadpoolctl==2.1.0
-    - torch-cluster==1.5.8
-    - torch-geometric==1.6.3
-    - torch-scatter==2.0.5
-    - torch-sparse==0.6.8
-    - torch-spline-conv==1.2.0
-    - ugfraud==0.1.1.3
-variables:
-  DGLBACKEND: pytorch
+    - tensorboard==2.4.0
+    - tensorflow==2.4.0
+    - tensorflow-estimator==2.4.0
+prefix: /home/rui/venvs/dgl
