--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,3 @@
-name: /home/rui/venvs/dgl
 channels:
   - pytorch
   - gurobi
@@ -203,8 +202,10 @@ dependencies:
   - zstd=1.4.5=h9ceee32_0
   - pip:
     - atari-py==0.2.6
+    - cvxopt==1.2.5
     - flatbuffers==1.12
     - grpcio==1.32.0
+    - install==1.3.4
     - keras-preprocessing==1.1.2
     - numpy==1.19.5
     - opencv-python==4.5.1.48
@@ -219,4 +220,4 @@ dependencies:
     - tensorboard==2.4.0
     - tensorflow==2.4.0
     - tensorflow-estimator==2.4.0
-prefix: /home/rui/venvs/dgl
+    - ugfraud==0.1.1.3
