--- a/environment.yml
+++ b/environment.yml
@@ -1,3 +1,4 @@
+name: dgl
 channels:
   - pytorch
   - gurobi
@@ -221,3 +222,4 @@ dependencies:
     - tensorflow==2.4.0
     - tensorflow-estimator==2.4.0
     - ugfraud==0.1.1.3
+prefix: /home/rui/venvs/dgl
